# MyoVerse

./: .buildinfo  .gitignore  CHANGELOG.md  README.html  README.md  api_documentation.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/workflows/: publish-to-pypi.yml  sphinx.yml
_downloads/05bdb3140c2c6ae43d9ab96ca1aabb68/: 2_complex_filtering.ipynb
_downloads/2447053e2041930520968f104ba525eb/: 3_spatial_filters.ipynb
_downloads/2e1121638ec36a1cbb5b97d435b9a50d/: 3_temporal_filters.ipynb
_downloads/3048b416b15f79b0b18b635903fb1541/: 4_train_model.py
_downloads/383fe03461b61967cc2ccbc5376e9e0f/: 1_emg_grid_layouts.ipynb
_downloads/537e7a6daba49d0b1bd9d60cdc90f61d/: 1_understanding_basics.ipynb
_downloads/6327ef2079176d026ee8af6cfdbdbd63/: 3_create_dataset.ipynb
_downloads/632eb12a71d3f92289ec045a8f98b131/: 2_complex_filtering.ipynb
_downloads/69e235d811d985b74ddf5c516309709d/: 1_understanding_basics.py
_downloads/7e6fb125fbfb347db086067edd316b6b/: 2_temporal_filters.py
_downloads/9f2cb15f0bc7d64c99cf540f56a7b298/: 3_spatial_filters.py
_downloads/b3ef4e63c63f06a8c247e51688fd86a5/: 1_understanding_basics.ipynb
_downloads/b4f422d2cbdc8451545e23c887c969b6/: 3_create_dataset.ipynb
_downloads/bb2a5e7896dc7caf0804f0567c52569a/: 2_spatial_filtering.ipynb
_downloads/c7b68e2cc4c02dcd9179f12542c55d6f/: 2_complex_filtering.py
_downloads/c8384fd115c355bc795ce0eb9d453404/: 4_train_model.ipynb
_downloads/ce39f9881119f429268c4361b8bea788/: 4_train_model.ipynb
_downloads/d60001d82d230d12618ba530a1632eb0/: 4_train_model.py
_downloads/d79d1017bb8ef19430aaba02fd423e71/: 1_understanding_basics.py
_downloads/e9b3b939df07ed035ba4d6827419153f/: 1_emg_grid_layouts.py
_downloads/f5314ee6db09ba5ae27baba5f3ca4f1a/: 2_temporal_filters.ipynb
_downloads/fcffb7474811b8673f212d2a3799f349/: 3_create_dataset.py
_modules/: index.html
_modules/myoverse/: datatypes.html
_sources/: README.md.txt  contributing.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: 1_understanding_basics.rst.txt  2_complex_filtering.rst.txt  3_create_dataset.rst.txt  4_train_model.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/modules/: datasets.rst.txt  filters.rst.txt
auto_examples/: 1_understanding_basics.html  2_complex_filtering.html  3_create_dataset.html  4_train_model.html  index.html  sg_execution_times.html
auto_examples/01_tutorials/: 1_understanding_basics.html  2_complex_filtering.html  3_create_dataset.html  4_train_model.html  index.html  sg_execution_times.html
auto_examples/02_filters/: 1_emg_grid_layouts.html  index.html  (+5 more)
doc_octopy/: datatypes.py
examples/: 1_understanding_basics.py  2_complex_filtering.py  3_create_dataset.py  4_train_model.py  5_emg_grid_layouts.py
modules/: datasets.html  datatypes.html  filters.html  model_components.html  models.html
myo_verse/: datatypes.py
myoverse/: __init__.py  datatypes.py
tests/: test_datatypes.py  workflow.py
(+239 files in other folders)
