[tool.poetry]
name = "MyoVerse"
version = "0.7.0"
description = ""
authors = [
    "Raul C. Sîmpetru <raul.simpetru@fau.de>",
    "Vlad Cnejevici <vlad.cnejevici@fau.de>"
]
readme = "README.md"
packages = [{include = "myo_verse"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
mplcursors = "^0.5.3"
networkx = "^3.3"
scipy = "^1.14.1"
statsmodels = "^0.14.2"
numba = "^0.60.0"
pywavelets = "^1.7.0"
zarr = "^2.18.3"
tqdm = "^4.66.5"
lightning = "^2.4.0"
toml = "^0.10.2"
torch = "^2.5.1"
torchvision = "^0.20.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-gallery = "^0.17.1"
sphinx = "7.3.7"
furo = "^2024.8.6"
rinohtype = "^0.5.5"
bayesian-torch = "^0.5.0"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
