[project]
name = "MyoVerse"
version = "0.7.1"
description = ""
readme = "README.md"
authors = [
    { name = "Raul C. Sîmpetru", email = "raul.simpetru@fau.de" },
    { name = "Vlad Cnejevici", email = "vlad.cnejevici@fau.de" },
]

requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.0.post0",
    "mplcursors>=0.6",
    "networkx>=3.4.2",
    "numba<=0.61.0",
    "pywavelets>=1.8.0",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "zarr>=3.0.4",
]

[tool.uv.sources]
torch = [
  { index = "torch-gpu", marker = "sys_platform != 'linux'" },
]
torchvision = [
  { index = "torch-gpu", marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[dependency-groups]
docs = [
    "bayesian-torch>=0.5.0",
    "furo>=2024.8.6",
    "memory-profiler>=0.61.0",
    "rinohtype>=0.5.5",
    "sphinx>=8.1.3",
    "sphinx-gallery>=0.19.0",
]
dev = [
    "pytest>=8.3.4",
    "pytest-loop>=1.0.13",
]
